--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
       - echo "Tagging the image.."
       - docker tag news-scrapper:latest 058264351046.dkr.ecr.us-east-1.amazonaws.com/news-scrapper:latest
       - echo "Pushing the Docker image to ECR..."
-      - ddocker push 058264351046.dkr.ecr.us-east-1.amazonaws.com/news-scrapper:latest
+      - docker push 058264351046.dkr.ecr.us-east-1.amazonaws.com/news-scrapper:latest
 
   post_build:
     commands:
